# adhaan

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci,yml  ci.yml
scripts/: adapt-tests.ts
src/: lib.rs  schedule.rs  vendored_tests.rs
src/astrolabe/: mod.rs  ops.rs  qiblah.rs  solar.rs  unit.rs
src/models/: coordinates.rs  method.rs  mod.rs  parameters.rs  polar_circle_resolution.rs  polar_cirlcle_resolution.rs
src/models/method/: moonsighting_com.rs
src/vendored_tests/: ankara_turkey.rs  doha_qatar.rs  dubai_gulf.rs  kuwait_city_kuwait.rs  london_moonsightingcommittee.rs  makkah_ummalqura.rs  singapore_singapore.rs  tehran_tehran.rs
