[package]
name = "adhaan"
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0"
description = "An Islamic prayer time calculator"
repository = "https://github.com/RagibHasin/adhaan"
license = "MIT"
keywords = ["adhaan", "adhan", "islam", "prayer", "salah"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jiff = "0.2.23"

[dev-dependencies]
approx = "0.5"
